Adding responsive design

--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -16,3 +16,11 @@ $colors: (
 @function setColor($color-name) {
   @return map-get($colors, $color-name)
 }
+
+$desktop: 840px;
+
+@mixin desktop {
+  @media (min-width: #{$desktop}) {
+    @content;
+  }
+}
