--- a/css/main.scss
+++ b/css/main.scss
@@ -9,15 +9,22 @@ body {
   margin: 0;
 
   #bg {
+    // https://bennettfeely.com/clippy/
     clip-path: polygon(100% 0, 100% 73%, 50% 100%, 0 100%, 0 0);
     background-color: setColor(primary);
     width: 100%;
     height: 100%;
     position: absolute;
     z-index: -1;
+  
+    @include desktop {
+      clip-path: polygon(82% 0, 54% 100%, 0 100%, 0 0);
+    }
   }
+}
 
-  header a{
+header {
+  a {
     text-decoration: none;
     color: #FFF;
     font-size: 2em;
@@ -25,11 +32,16 @@ body {
     display: block;
     text-transform: uppercase;
   }
-
 }
 
 main {
-  
+
+  @include desktop {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "hero card";
+  }
+
   section#card {
     display: block;
     background-color: setColor(white);
@@ -38,6 +50,13 @@ main {
     width: 80%;
     padding: $padding;
     box-shadow: 0 10px 30px rgba(#000, 0.2);
+
+    @include desktop {
+      grid-area: card;
+      height: fit-content;
+      align-self: center;
+      margin: 1em;
+    }
 
     ul {
       list-style-type: none;
@@ -64,13 +83,18 @@ main {
         }
       }
     }
-
   }
 
   section#hero {
     padding: $padding;
     text-align: center;
     
+    @include desktop {
+      grid-area: hero;
+      text-align: left;
+      margin: 4em 0 0 4em;
+    }
+
     h1 {
       margin: 0 auto;
       color: setColor(white);
@@ -91,15 +115,20 @@ main {
       display: block;
       border-radius: $borders;
       background-color: setColor(accent);
-      margin: $margin auto 0 auto;
+      margin: $margin*2 auto 0 auto;
       padding: $padding;
       width: 80%;
       color: setColor(dark-blue);
       text-transform: uppercase;
       font-weight: bold;
+      text-align: center;
+
+      @include desktop {
+        margin: $margin*2 0;
+      }
+
     }
 
   }
-
 }
 
