--- a/css/main.scss
+++ b/css/main.scss
@@ -35,12 +35,60 @@ body {
 header {
   a {
     text-decoration: none;
-    color: #FFF;
-    font-size: 2em;
-    padding: $padding;
     display: block;
+  }
+  a.logo {
+    font-size: 2em;
+    color: #FFF;
+    padding: $padding;
     text-transform: uppercase;
   }
+
+  .container{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 1;
+    // background-color: setColor(accent);
+    border-radius: $borders;
+    
+    .inner {
+      //max-width: 50%;
+      background-color: setColor(accent);
+      padding: $padding;
+      border-radius: $borders;
+      clip-path: circle(10% at 92% 25%);
+      transition: all .5s ease-in-out;
+      cursor: pointer;
+      
+      &:hover {
+        clip-path: circle(75%);
+        background-color: setColor(light-blue);
+      }
+
+      span {
+        float: right;
+        font-weight: bold;
+        margin-right: 9px;
+        position: relative;
+        transition: display .5s;
+      }
+
+      &:hover span {
+        display: none;
+      }
+
+      h1 {
+        margin: 0;
+        font-size: 1.6em ;
+      }
+
+      p {
+        font-size: 0.8em;
+      }
+    }
+  } 
+
 }
 
 main {
